# In Rust, release profiles are predefined and customizable profiles with different
# configurations that allow a programmer to have more control over various options
# for compiling code. Each profile is configured independently of the others.

# Cargo has two main profiles: the `dev` profile Cargo uses when you run `cargo build`
# and the `release` profile Cargo uses when you run `cargo build --release`. The `dev`
# profile is defined with good defaults for development, and the `release` profile
# has good defaults for release builds.

[package]
name = "_13-cargo-crate-io"
version = "0.1.0"
edition = "2021"

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# The `opt-level` setting controls the number of optimization Rust will apply to your
# code, with a range of 0 to 3. Applying more optimizations extends compiling time,
# so if you're in development and compiling your code often, you'll want fewer optimizations
# to compile faster even if the resultant code runs slower.